# mempalace-autopilot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: .mcp.json  plugin.json
hooks/: hook_runner.py  hooks.json
scripts/: context_generator.py  migrate_claude_mem.py
shared/: utils.py
tests/: test_context_generator.py  test_hook_events.py  test_hook_runner.py  test_migrate.py
