[project]
name = "mempalace-autopilot"
version = "1.0.0"
description = "Claude Code plugin: automatic memory capture and context injection for MemPalace"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Raouf"}]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
